# svm_pegasos

./: CMakeLists.txt  README.md  SVM.cpp  SVM.cu  SVM.h  byteorder_helper.cpp  byteorder_helper.cu  byteorder_helper.h  main.cpp  main.cu  mnist_data_classifier.cpp  mnist_data_classifier.cu  mnist_data_classifier.h  mnist_data_loader.cpp  mnist_data_loader.cu  mnist_data_loader.h  svm.cpp  svm.h  svm_fit_kernel.cl  test.cpp  test.cu
